--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Compares two configuration files and shows a difference",
   "main": "index.js",
-  
+  "type": "module",
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/ruslanrust/frontend-project-lvl2#readme",
   "dependencies": {
-    "commander": "^9.3.0"
+    "commander": "^9.3.0",
+    "lodash": "^4.17.21"
   }
 }
