--- a/.github/workflows/nodeci.yml
+++ b/.github/workflows/nodeci.yml
@@ -21,3 +21,7 @@ jobs:
     - run: make install
     - run: make lint
     - run: make test
+    - name: Test & publish code coverage  
+      uses: paambaati/codeclimate-action@v3
+      env:
+        CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
